css/main.css
@charset "UTF-8";
@import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:100,300,400,500,600,700");

body{
  font-size: 16px;
  font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
  margin:0;
}

.navbar{
  z-index: 999;
  margin-bottom: 0 !important;

}
.navbar a {
  /*font-size: 12px;*/
  margin:0;
  padding: 0;
  font-weight: 300;
  font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
  /*text-transform: uppercase;*/
}
.navbar-toggle{margin-top: 30px;}
.navbar-brand img{
  padding: 20px;
  max-width: 200px;
}
.navbar-toggle
{
  position:relative;
  float:right;
  padding:9px 10px;
  margin-top:30px;
  margin-right:15px;
  margin-bottom:8px;
  background-color:transparent;
  background-image:none;
  border-radius:4px
}
.jumbotron {
 min-height: 650px;
}

.navbar-default {
  background-color: white;
  background-image: none;
  border: none;
}
.navbar-brand{
  line-height: 100px;
  height: 100px;
  padding-top: 0;
}
@media screen and (min-width: 768px) {

  .navbar-nav li a {
    line-height: 100px;
    height: 100px;
    padding-top: 0;
  }
}

/*.navbar-nav li a.btn{
  line-height: 30px;
  display: inline-block;
  height: 30px;
  margin-top: 35px;
  background: #92F20D;
  color: white;
  border:none;
  border-radius: 0 !important;

  }*/
  .affix {
    position: fixed;
  }

  .btn-white{
    border:1px solid white;
    padding: 1em 2em;
    display: inline-block;
    margin: 0.8em;
    color: white;
  }
  .btn-white.green{
    border: 1px solid #81da02;
    color: #81da02;
  }
  .btn-white.green:hover{
   background: #81da02;
   color: white;
 }
 .btn-white:hover{
  background: white;
  color: #555555;
}
.start-with-us{
  border: 1px solid white; padding: 1.5em; text-transform: uppercase; color:white;
}
.start-with-us:hover{
  background: white;
  color: #00C089;
}

.btn-white-nav{
  padding: 15px 20px;
  margin-top: 15px;
  border: 2px solid #81da02;
  border-radius: 0;
  background: none;
  color: #81da02;
  font-weight: 400;
}
.btn-white-nav:hover{
  background: #81da02;
  color: white;
}

h3.section-title{
  padding-bottom: 2em;
  margin-bottom: 1em;
  border-bottom: 2px solid #333;
  display: inline-block;
  color: #333;
}
.white h3.section-title{
  border-bottom: 2px solid white;
  color: white;
}
p.description{
  font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
  font-size: 1.2em;
  text-align: center;
  font-weight: 300;
  letter-spacing: 0.5px;
  line-height: 1.3em;
  margin-bottom: 2em;
}

.home-hero{

  color: white;
  /*margin-top: 100px;*/
  padding: 200px 0 60px 0;
  /*background: url('../img/hero-bg.jpg');*/
  background-position: center center;
  background-size: cover;
  background-image: linear-gradient(to bottom, rgba(30, 30, 30, 0.5) 0%, #1e1e1e 100%), url(../img/hero-pic.jpeg);
  /*background: #0094ff;*/
}
.home-hero h1{
  border:1px solid white;
  padding: 1.5em;
  font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
  font-weight: 600;
}
.home-hero .a-arrow-down{
  margin-top: 2em;
  display: block;
  text-align: center;
}

.section-title{
  text-align: center;
}

.home-our-work{
  padding: 100px 0 100px 0;
  background: #061911;
  background: #00BF8A;
  color: white;
  background: url('img/project_papper.png') #061911;
}
.home-our-work img{
  box-sizing: border-box;
  border:1px solid transparent;
}
.home-services .box{
  margin-top: 2.1em;
  border:1px solid white;
  box-sizing: border-box;
  height: 200px;
  padding: 1.5em;
}
.home-team ,.home-services,.home-technologies,.home-testimonials {
  padding: 100px 0 60px 0;
}
.home-team, .home-technologies{
  background: white;
  color: #595959;
}
.home-technologies{
  padding-bottom: 100px;
}
.home-technologies svg{
  width: 100%;
  padding-right: 20%;
}

.home-technologies .tech-list li{

  list-style: none;
  font-weight: 100;
  color: #333;
  text-align: right;
  font-size: 24px;
  line-height: 40px;
}

@media screen and (max-width: 768px) {
  .home-technologies .tech-list {
    padding-left: 0;
  }
  .home-technologies .tech-list li{
    font-size: 28px;
    line-height: 40px;
    text-align: center;
    letter-spacing: 0.5px;
  }
  .home-technologies svg{
    width: 100%;
    padding-right: 0;
  }
}

.row.no-gutters {
  margin-right: 0;
  margin-left: 0;
}
.row.no-gutters > [class^="col-"],
.row.no-gutters > [class*=" col-"] {
  padding-right: 0;
  padding-left: 0;
}




/*================================
    GENERAL STYLES
    ============================  */

    /* GOOGLE FREE FONTS */
    @import url(http://fonts.googleapis.com/css?family=Oxygen);
    /* BODY STYLE - JUST FOR GOOD LOOK */
    body {

      background-color: #0094ff;
      color: #fff;
      /*font-family: 'Oxygen', sans-serif;*/
      min-height:700px;
      line-height:25px;
    }

/*================================
    TESTIMONIAL STYLES
    ============================  */
    .testimonial-section {
      width: 100%;
      height: auto;
      padding: 15px;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 0;
      position: relative;
      border: 1px solid #fff;
      font-size:28px;
      line-height: 32px;
      font-weight: 100;
      color: rgba(255,255,255,0.95);
      padding: 2em;
      letter-spacing: 1px;
    }
    .size-1{
      font-size: 18px;
    }
    .testimonial-section span {
      font-weight: 600;
      font-size: 44px;
    }
    .testimonial-section:after {
     /* top: 100%;
      left: 10%;
      border: solid transparent;
      content: " ";
      position: absolute;
      border-top-color: #fff;
      border-width: 15px;
      margin-left: -15px;*/
    }

    .testimonial-section-name {
      margin-top: 30px;
      /*margin-left: 60px;*/
      text-align:center;
      color:white;
      margin-bottom: 30px;
    }
    .testimonial-section-name a{
     text-decoration: underline;
     font-weight: 400;
     color: white;
   }
   .testimonial-section-name span{
    font-weight: 100;
    letter-spacing: 1px;
    font-size: 16px;

  }
  .testimonial-section-name img {
    margin-left: 20px;
    max-width:80px;
    margin-bottom: 10px;
    border: 2px solid #fff;
  }
  .carousel-indicators-set {
    position:static;
    margin-left:0px;
    width:100%;
  }

  .site-footer{
    padding: 5em 0;
    text-align: center;
    background: rgba(46, 50, 52, 1);
  }

  .site-footer p{ margin-top:15px;color:#4d5152;}

/* Full Screen Modal */

.modal.modal-fullscreen {
  /* Maximize the main wrappers on the screen */
  /* Make the parent wrapper of the modal box a full-width block */
  /* Remove borders and effects on the content */
  /**
	 * /!\ By using this feature, you force the header and footer to be placed
	 * in an absolute position. You must handle by yourself the margin of the
	 * content.
	 */
}
.modal.modal-fullscreen .modal-dialog,
.modal.modal-fullscreen .modal-content {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  background-color: rgba(0,0,0,0.4);
  overflow: scroll;
}
.modal.modal-fullscreen .modal-dialog {
  margin: 0;
  width: 100%;
}
.modal.modal-fullscreen .modal-content {
  border: none;
  -moz-border-radius: 0;
  border-radius: 0;
  -webkit-box-shadow: inherit;
  -moz-box-shadow: inherit;
  -o-box-shadow: inherit;
  box-shadow: inherit;
  color: white;
}

.modal.modal-fullscreen.force-fullscreen {
  /* Remove the padding inside the body */
}
.modal.modal-fullscreen.force-fullscreen .modal-body {
  padding: 0;
}

.modal-header {
	border: none;
}
.modal.modal-fullscreen.force-fullscreen .modal-header,
.modal.modal-fullscreen.force-fullscreen .modal-footer {
  left: 0;
  position: absolute;
  right: 0;
}
.modal.modal-fullscreen.force-fullscreen .modal-header {
  top: 0;
}
.modal.modal-fullscreen.force-fullscreen .modal-footer {
  bottom: 0;
}

img#modal_logo {
	width: 200px;
	padding-left: 50px;
}

div#input-border {
  border: 3px solid white;
  border-radius: 50%;
  cursor: pointer;
  height: 50px;
  padding-bottom: 10px;
  width: 50px;
}

/* Text into start a project modal */

h1#project_form_title {
	font-size: 60px;
}

p#project_form_subtitle {
	font-size: 30px;
	font-weight: 100;
  line-height: 42px;
  padding: 0 5em;
}

h3.form-text {
	font-size: 18px;
	font-weight: 700;
}

.input-lg {
	font-size: 25px;
	font-weight: 300;
  padding: 12px 20px;
  height: 80px;
  line-height: 1.33;
  border-radius: 2px;
  color: white;
  background-color: transparent;
  background-image: none;
  border: 1px solid #999;
  box-shadow: inset 0 1px 1px rgba(142,239,6,0.075);
  transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
}

input.input-lg:focus {
	outline: 2px solid rgb(142,239,6)!important;
  border: 2px solid rgb(142,239,6)!important;
}

div#range {
	margin-bottom: 50px;
}

.noUi-connect {
	background: rgb(142,239,6)!important;
}

.budget-value {
	font-size: 22px;
	font-weight: 300;
	line-height: 32px;
	text-align: center;
	color: rgb(142,239,6)!important;
}

button.btn-submit-project {
  color: #fff;
  background-color: rgb(142,239,6)!important;
  border-color: rgb(142,239,6)!important;
  border-radius: 2px;
  padding: 10px 16px;
  font-size: 23px;
  line-height: 1.33;
  width: 100%;
}

span#close_modal_button {
  display: inline-block;
  font-size: 29px;
  font-weight: 300;
  margin-top: 3px;
  position: relative;
  /*top: 55%;*/
  line-height: 37px;
  /*transform: translateY(-50%);*/
}

.go-to-project-planner {
	color: rgb(142,239,6);
}
.go-to-project-planner:hover {
	color: rgb(142,239,6);
}

@media all and (max-width: 720px){
	h1#project_form_title {
		font-size: 45px;
	}
  p#project_form_subtitle {
		font-size: 23px;
    line-height: 30px;
  }
}

@media all and (max-width: 540px){
	h1#project_form_title {
		font-size: 35px;
	}
  p#project_form_subtitle {
		font-size: 18px;
    line-height: 25px;
  }
}

@media all and (max-width: 600px){
	div.noUi-value.noUi-value-horizontal.noUi-value-sub {
		display: none;
	}
}

 h1#header_title {
    font-size: 30px;
    line-height: 1.3em;
    font-weight: 300;
  }

@media all and (max-width: 660px){
  h1#header_title {
    font-size: 30px;
    line-height: 1.3em;
    font-weight: 300;
  }
}

@media all and (max-width: 486px){
  h1#header_title {
    font-size: 23px;
    line-height: 1.3em;
    font-weight: 300;
  }
}

a.social {
	margin-right: 8px;
	color: #4d5152;
}

.footer-text {
	color: #4d5152;
}

.footer-section {
	margin-bottom: 80px;
}

.btn-white-nav-footer{
  padding: 15px 20px;
  margin-top: 15px;
  border: 2px solid #4d5152;
  border-radius: 0;
  background: none;
  color: #4d5152;
  font-weight: 400;
}
.btn-white-nav-footer:hover{
  border-color: white;
  color: white;
}

img.img-responsive {
  margin: 0 auto;
}


/*Fix navbar collapse breakpoint*/
@media (max-width: 991px) {
  .navbar-header {
      float: none;
  }
  .navbar-toggle {
      display: block;
  }
  .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
      margin: 7.5px -15px;
  }
  .navbar-nav>li {
      float: none;
  }
  .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .navbar-text {
      float: none;
      margin: 15px 0;
  }
  /* since 3.1.0 */
  .navbar-collapse.collapse.in {
      display: block!important;
  }
  .collapsing {
      overflow: hidden!important;
  }
}

.modal.modal-fullscreen .modal-dialog, .modal.modal-fullscreen .modal-content{
  background-color: rgba(0,0,0,0.55);
}

